# hypermesh

./: .gitignore  Cargo.toml  PERFORMANCE.md  README.md  audit.txt  plan.txt  references.txt
.github/workflows/: ci.yml  pages.yml
benches/: dispatch_trace.rs  end_to_end.rs  exact_boolean_stages.rs  exact_validation.rs
benches/common/: mod.rs
examples/: basic.rs  menger_sponge.rs  multiple_models.rs
examples/hypermesh_ui/: Cargo.toml  Trunk.toml  index.html
examples/hypermesh_ui/src/: app.rs  main.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/artifacts/exact_boolean_preflight/: oom-50ade26f6c38faa3b7d6e751e187de96906eaf47  oom-53811574be924170b1a15baf69e91a5283ce2ae5  oom-67ac1a9dbd3c291ceedac23e6a37ebabd43385f8  oom-6cbd6a1d52d7c6ae8f654ed3b71e624586c28ac9  oom-961fd7e073afceb9bc75a0529a4ec333018a6321
fuzz/artifacts/exact_mesh_input/: crash-71ab5dce9d56a15e44e571c92a699ccdddbb02f6
fuzz/corpus/exact_boolean_preflight/: case_same_outer_source_island_point_touch
fuzz/fuzz_targets/: boolean_pipeline.rs  bvh_queries.rs  common.rs  exact_adjacent_polygon.rs  exact_arrangement.rs  exact_boolean_pipeline_parity.rs  exact_boolean_preflight.rs  exact_integer_mesh_input.rs  exact_mesh_input.rs  exact_surface_arrangement_parity.rs  integer_mesh_input.rs  legacy_boolean_adapter.rs  mesh_and_hull.rs  mesh_artifact_manifest.rs  mesh_input.rs  polygon_predicates.rs
fuzz/fuzz_targets/support/: mod.rs
src/: adapter.rs  adjacent.rs  adjacent_polygon.rs  affine_box.rs  affine_solid.rs  affine_surface.rs  arrangement2d.rs  arrangement3d.rs  artifact.rs  audit.rs  boolean.rs  bounds.rs  box_solid.rs  bvh.rs  cell_complex.rs  cells.rs  clip.rs  common.rs  construction.rs  contained_adjacent.rs  convex.rs  convex_hull.rs  coplanar.rs  error.rs  exact_key.rs  facts.rs  geometry.rs  gpu.rs  graph.rs  halfspace.rs  handoff.rs  intersection.rs  legacy_adapter.rs  legacy_report.rs  lib.rs  local_bsp.rs  loop_triangulation.rs  mesh.rs  narrow.rs  operations.rs  (+32 more)
src/adjacent/: polygon.rs
src/arrangement3d/: cell_complex.rs  loop_triangulation.rs  regularization.rs
src/arrangement3d/cell_complex/: simplify.rs
src/boolean/: adjacent.rs  affine_solid.rs  cells.rs  contained_adjacent.rs  convex.rs  orthogonal_solid.rs  region.rs  reports.rs  solid.rs  volumetric.rs  volumetric_cells.rs  winding.rs
src/boolean/adjacent/: polygon.rs
src/boolean03/: kernel01.rs  kernel02.rs  kernel03.rs  kernel11.rs  kernel12.rs  mod.rs
src/boolean45/: mod.rs
src/cell_complex/: simplify.rs
src/exact/: adapter.rs  adjacent.rs  adjacent_polygon.rs  affine_box.rs  affine_solid.rs  affine_surface.rs  arrangement2d.rs  arrangement3d.rs  artifact.rs  audit.rs  boolean.rs  boolmesh.rs  bounds.rs  box_solid.rs  cell_complex.rs  cells.rs  construction.rs  contained_adjacent.rs  convex.rs  coplanar.rs  facts.rs  graph.rs  handoff.rs  intersection.rs  mesh.rs  mod.rs  narrow.rs  orthogonal_solid.rs  orthogonal_surface.rs  package.rs  planar.rs  predicates.rs  proposal.rs  provenance.rs  readiness.rs  region.rs  reports.rs  scalar.rs  simplify.rs  solid.rs  (+8 more)
src/exact/boolmesh/: boolean45.rs  cleanup.rs  kernel02.rs  kernel03.rs  kernel11.rs  kernel12.rs  kernel12_boundary.rs  kernel12_coplanar.rs  kernel12_intersect.rs  kernel12_op.rs  kernel_frame.rs
src/exact/boolmesh/boolean45/: assembly.rs  export.rs  face_loops.rs  geometry.rs  output_triangles.rs  triangulation.rs
src/graph/: intersection.rs
src/manifold/: bounds.rs  collider.rs  hmesh.rs  mod.rs
src/mesh/: arrangement3d.rs  boolean.rs  bounds.rs  error.rs  facts.rs  graph.rs  prepared.rs  validation.rs  view.rs
src/mesh/arrangement3d/: arrangement2d.rs  cell_complex.rs  loop_triangulation.rs  regularization.rs  tests.rs
src/mesh/arrangement3d/cell_complex/: simplify.rs
src/mesh/boolean/: adjacent.rs  affine_solid.rs  cells.rs  contained_adjacent.rs  convex.rs  evidence.rs  orthogonal_solid.rs  region.rs  replay.rs  reports.rs  solid.rs  tests.rs  volumetric.rs  volumetric_cells.rs  winding.rs
src/mesh/boolean/adjacent/: polygon.rs
src/mesh/boolean/volumetric/: witness.rs
src/mesh/graph/: intersection.rs  key.rs  tests.rs
src/segment_trace/: halfspace_witness.rs  leaf_probe.rs  path.rs  probe_cache.rs  probe_geometry.rs  probe_reachability.rs  tests.rs  witness.rs
src/simplification/: collapse.rs  dedup.rs  mod.rs  re_swap.rs
src/subdivision/: split.rs  tests.rs
src/triangulation/: ear_clip.rs  flat_tree.rs  mod.rs  tri_halfs.rs
tests/: core.rs  exact_mesh.rs  kernel_exact_mesh.rs  kernel_mesh.rs  manifold_upstream.rs  regression.rs
tests/upstream/manifold/: README.md
