[package]
name = "hypermesh"
version = "0.1.0"
edition = "2024"
description = "Hyperreal-backed exact mesh boolean primitives for Rust."
license = "MIT"

[dependencies]
hyperlattice = { path = "../hyperlattice" }
hyperreal = { path = "../hyperreal" }
hyperlimit = { path = "../hyperlimit", default-features = false, features = ["std"] }

[dev-dependencies]
proptest = "1.7.0"

[patch.crates-io]
hyperreal = { path = "../hyperreal" }
hyperlimit = { path = "../hyperlimit" }
