[package]
name = "hypermesh"
version = "0.1.0"
edition = "2024"
description = "Hyperreal-backed exact mesh boolean primitives for Rust."
license = "MIT"

[dependencies]
hyperlattice = { path = "../hyperlattice" }
hyperreal = { path = "../hyperreal" }
hyperlimit = { path = "../hyperlimit", default-features = false, features = ["std"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.7.0"

[features]
default = []
dispatch-trace = [
    "hyperreal/dispatch-trace",
    "hyperlattice/hyperreal-dispatch-trace",
    "hyperlimit/dispatch-trace",
]

[[bench]]
name = "end_to_end"
harness = false

[[bench]]
name = "dispatch_trace"
harness = false
required-features = ["dispatch-trace"]

[patch.crates-io]
hyperreal = { path = "../hyperreal" }
hyperlimit = { path = "../hyperlimit" }
