[package]
name = "hypermesh-fuzz"
version = "0.1.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
hypermesh = { path = "..", default-features = false }
hyperlimit = { path = "../../hyperlimit" }
hyperreal = { path = "../../hyperreal" }
hypertri = { path = "../../hypertri", default-features = false, features = ["cdt", "earcut"] }
libfuzzer-sys = "0.4"

[patch.crates-io]
hyperlattice = { path = "../../hyperlattice" }
hyperlimit = { path = "../../hyperlimit" }
hyperreal = { path = "../../hyperreal" }
hypertri = { path = "../../hypertri" }

[[bin]]
name = "mesh_input"
path = "fuzz_targets/mesh_input.rs"
test = false
doc = false
bench = false

[[bin]]
name = "integer_mesh_input"
path = "fuzz_targets/integer_mesh_input.rs"
test = false
doc = false
bench = false
